Fix spacing to match original
[MAILPOET-1808]

--- a/assets/css/src/components/_importExport.scss
+++ b/assets/css/src/components/_importExport.scss
@@ -126,7 +126,7 @@ span {
   flex-direction: column;
 
   > * {
-    margin: 20px 0px;
+    margin: 10px 0px;
   }
 
   .mailpoet_import_selection_form {
